Add last committed item URL validity check in SearchEngineTabHelper.

This CL adds a validity check for FaviconDriver::GetActiveURL().
GetActiveURL() depends on GetLastCommittedItem, and can be nil at various
times -- such as during session restore on startup.

Bug: 908240
Change-Id: I32bcf8e93b862fd87ae22bce6c59cbb9c4ba2f5d
Reviewed-on: https://chromium-review.googlesource.com/c/1350873
Reviewed-by: Rohit Rao <rohitrao@chromium.org>
Commit-Queue: Yi Su <mrsuyi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#612263}
Former-commit-id: 1b6cda4e53ceec22638d07060bdb97008d97626e